--zombie chickens still spawn --special zombies dont dissapear on loss or quit and dont count for loss --zombies continue to spawn even when you lose --baby biglins spawn --taking damage from regen - make harming --the player getting moved by the splash tower and taking damage --deleting the players game items and related info in both the eventhandler and in start game --towerplacement jank --added boots and netherite to armor loops
--special mobs coin drop no work
--round didnt end after setting round
--broke gui somehow
--still doesnt stop new spawns, or remove special mobs
--towers can spawn inside blocks
--get rid of "compass has been given" message

--impliment gui
--strength and speed not checking money

Signed-off-by: Logan Slicker <Lslicker24@gmail.com>